--- a/project/cv/index.html
+++ b/project/cv/index.html
@@ -747,13 +747,8 @@
 
 </figure>
 
-<p>We develop the learning architecture that can effectively complete the depth from a <strong>color image</strong> and <strong>sparse LiDAR</strong> data.<br> Our model consists of two
-pathways: the local pathway and the global pathway which is illustrated in Fig 1.<br>
-The local pathway aims to extract high-resolution features, and it is made up of 2D block, which is illustrated in Fig. 2(b). The global pathway extracts low-resolution features, and it comprises our proposed U-Block, as shown in Fig. 2(a). Also, we improve the
-performance of the local pathway by concatenating binary
-mask to the sparse LiDAR data, because the binary mask
-can help our model to indicate the valid values of sparse LiDAR data. Finally, to combine the results of the local and
-global pathways, we apply the attention mechanism(confidence map) to integrate the predicted dense from two pathways.</p>
+<p>We develop the learning architecture that can effectively complete the dense depth from a <strong>color image</strong> and <strong>sparse LiDAR</strong> data. Our model consists of two pathways: the <strong>local pathway</strong> and the <strong>global pathway</strong> which is illustrated in Fig 1. The local pathway aims to extract high-resolution features, and it is made up of 2D block, which is illustrated in Fig. 2(b). The global pathway extracts low-resolution features, and it comprises our proposed U-Block, as shown in Fig. 2(a).
+The structure of the pathway is illistrated in Fig 3. Also, we improve the performance of the local pathway by concatenating binary mask to the sparse LiDAR data, because the binary mask can help our model to indicate the valid values of sparse LiDAR data. Finally, to combine the results of the local and global pathways, we apply the attention mechanism(confidence map) to integrate the predicted dense from two pathways.</p>
 
 
 
@@ -838,6 +833,36 @@ global pathways, we apply the attention mechanism(confidence map) to integrate t
 
 
   <img src="/img/confidence.png" alt=""  >
+</a>
+
+
+
+</figure>
+
+
+
+
+
+
+  
+
+
+
+
+
+
+
+
+
+
+
+<figure >
+
+
+  <a data-fancybox="" href="/img/performance.png" >
+
+
+  <img src="/img/performance.png" alt=""  >
 </a>
 
 
