--- a/project/eurobot/index.html
+++ b/project/eurobot/index.html
@@ -774,6 +774,8 @@
 
 <div class="article-tags">
   
+  <a class="badge badge-light" href="/tag/robotics/">Robotics</a>
+  
   <a class="badge badge-light" href="/tag/eurobot/">Eurobot</a>
   
 </div>
@@ -906,6 +908,15 @@
 
 
   
+  
+  <div class="article-widget content-widget-hr">
+    <h3>Related</h3>
+    <ul>
+      
+      <li><a href="/project/exo/">Exoskeleton</a></li>
+      
+    </ul>
+  </div>
   
 
 
