--- a/project/exo/index.html
+++ b/project/exo/index.html
@@ -27,7 +27,7 @@
   
     
   
-  <meta name="description" content="Dealing ">
+  <meta name="description" content="Seek a new way to deal with the shoulder rehabilitation problem">
 
   
   <link rel="alternate" hreflang="en-us" href="https://robintzeng.github.io/project/exo/">
@@ -232,7 +232,7 @@
   <meta property="og:site_name" content="JING AN TZENG">
   <meta property="og:url" content="https://robintzeng.github.io/project/exo/">
   <meta property="og:title" content="Exoskeleton | JING AN TZENG">
-  <meta property="og:description" content="Dealing "><meta property="og:image" content="https://robintzeng.github.io/project/exo/featured.png">
+  <meta property="og:description" content="Seek a new way to deal with the shoulder rehabilitation problem"><meta property="og:image" content="https://robintzeng.github.io/project/exo/featured.png">
   <meta property="twitter:image" content="https://robintzeng.github.io/project/exo/featured.png"><meta property="og:locale" content="en-us">
   
     
@@ -284,7 +284,7 @@
       "url": "https://robintzeng.github.io/images/icon_hu33e8c61f27fd641c1e5b23db9d65383a_5197_192x192_fill_lanczos_center_2.png"
     }
   },
-  "description": "Dealing "
+  "description": "Seek a new way to deal with the shoulder rehabilitation problem"
 }
 </script>
 
@@ -711,7 +711,102 @@
   <div class="article-container">
 
     <div class="article-style">
-      <p>we want to deal with the shoulder rehabilitation problem, so we make this exoskeleton. In this project, there are two parts the sensing part and the activation part, the sensing part get the info and the gesture and send to the activate part to practice the action that record. Thus, the physical therapist can record his motion to the exoskeleton and let the patient do it for many many times.</p>
+      <h2 id="abstract">Abstract</h2>
+<p>To deal with the shoulder rehabilitation problem, we made an exoskeleton suit.</p>
+<p>In this project, there are two parts of the exoskeleton. The sensing part and the activation part, the sensing part would fetch the information of the rehabilitation exercise from the therapist.</p>
+<p>And then,it will send those information to the activating part to practice the action that recorded.</p>
+<p>Thus, the physical therapist can record his motion to the exoskeleton and let the patient do it for many times.</p>
+<p>Also, we made a GUI for the user to record and see whether their gesture is correct or not.
+
+
+
+
+
+  
+
+
+
+
+
+
+
+
+
+
+
+<figure >
+
+
+  <a data-fancybox="" href="/img/exoskeleton.png" >
+
+
+  <img src="/img/exoskeleton.png" alt=""  >
+</a>
+
+
+
+</figure>
+
+
+
+
+
+
+  
+
+
+
+
+
+
+
+
+
+
+
+<figure >
+
+
+  <a data-fancybox="" href="/img/EXO_stand.png" >
+
+
+  <img src="/img/EXO_stand.png" alt=""  >
+</a>
+
+
+
+</figure>
+
+
+
+
+
+
+  
+
+
+
+
+
+
+
+
+
+
+
+<figure >
+
+
+  <a data-fancybox="" href="/img/EXO_sit.png" >
+
+
+  <img src="/img/EXO_sit.png" alt=""  >
+</a>
+
+
+
+</figure>
+</p>
 
     </div>
 
@@ -722,6 +817,8 @@
 
 
 <div class="article-tags">
+  
+  <a class="badge badge-light" href="/tag/robotics/">Robotics</a>
   
   <a class="badge badge-light" href="/tag/exoskeleton/">Exoskeleton</a>
   
