--- a/project/exo/index.html
+++ b/project/exo/index.html
@@ -713,9 +713,9 @@
     <div class="article-style">
       <h2 id="abstract">Abstract</h2>
 <p>To deal with the shoulder rehabilitation problem, we made an exoskeleton suit.</p>
-<p>In this project, there are two parts of the exoskeleton. The sensing part and the activation part, the sensing part would fetch the information of the rehabilitation exercise from the therapist.</p>
-<p>And then,it will send those information to the activating part to practice the action that recorded.</p>
-<p>Thus, the physical therapist can record his motion to the exoskeleton and let the patient do it for many times.</p>
+<p>In this project, there are two parts of the exoskeleton. The sensing part and the activation part, the sensing part would fetch the information about the rehabilitation exercise from the therapist.</p>
+<p>And then, it will send that information to the activating part to practice the action that recorded.</p>
+<p>Thus, the physical therapist can record his motion to the exoskeleton and let the patient do it many times.</p>
 <p>Also, we made a GUI for the user to record and see whether their gesture is correct or not.
 
 
