--- a/project/mobile/index.html
+++ b/project/mobile/index.html
@@ -712,7 +712,7 @@
 
     <div class="article-style">
       <h2 id="abstract">Abstract</h2>
-<p>This project aims to adapt an open source visual
+<p>This project aims to adopt an open-source visual
 inertial navigation framework with two modifications. First, an
 alternative visual descriptor and extractor, SuperPoint, is tested
 in place of ORB features. Secondly, an invariant error state is
