--- a/project/cv/index.html
+++ b/project/cv/index.html
@@ -749,7 +749,7 @@
 
 <h2 id="abstract">Abstract</h2>
 <p>We develop the learning architecture that can effectively complete the dense depth from a <strong>color image</strong> and <strong>sparse LiDAR</strong> data.</p>
-<p>Our model consists of two pathways: the <strong>local pathway</strong> and the <strong>global pathway</strong> which is illustrated in Fig 1. The local pathway aims to extract high-resolution features, and it is made up of 2D block, which is illustrated in Fig. 2(b). The global pathway extracts low-resolution features, and it comprises our proposed U-Block, as shown in Fig. 2(a). The structure of the pathway is illistrated in Fig 3.</p>
+<p>Our model consists of two pathways: the <strong>local pathway</strong> and the <strong>global pathway</strong> which is illustrated in Fig 1. The local pathway aims to extract high-resolution features, and it is made up of 2D blocks, which is illustrated in Fig. 2(b). The global pathway extracts low-resolution features, and it comprises our proposed U-Block, as shown in Fig. 2(a). The structure of the pathway is illustrated in Fig 3.</p>
 <p>Also, we improve the performance of the local pathway by concatenating binary mask to the sparse LiDAR data, because the binary mask can help our model to indicate the valid values of sparse LiDAR data.</p>
 <p>Finally, to combine the results of the local and global pathways, we apply the attention mechanism (confidence map) to integrate the predicted dense from two pathways.</p>
 
