--- a/project/eurobot/index.html
+++ b/project/eurobot/index.html
@@ -756,7 +756,7 @@
 <p>Created in 1998, Eurobot is an international robotics contest.<br></p>
 <p>For each team, we have to make two robots that can cooperate to finish the tasks on the given map such as throwing the ball into a bucket and stacking the color bricks in the given order.<br></p>
 <p>When the robots finish the task, they would get some points. The team with higher scores wins.</p>
-<p>I was the software team leader in this contest. In our team, we took charge of sensing the world and making the decision for the robot. In addition, I also made an indoor positioning system with UWB and Kalman filter which can locate the rival accurately.</p>
+<p>I was the software team leader in this contest. In our team, we took charge of sensing the world and making the decision for the robot. In addition, I made an indoor positioning system with UWB and Kalman filter which can locate the rival accurately.</p>
 <h2 id="video">Video</h2>
 
 <div style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden;">
