--- a/project/cv/index.html
+++ b/project/cv/index.html
@@ -981,7 +981,7 @@
       
     
     <li>
-      <a href="https://www.linkedin.com/in/jing-an-tzeng-459b4a13a/" target="_blank" rel="noopener">
+      <a href="https://www.linkedin.com/in/jing-an-tzeng/" target="_blank" rel="noopener">
         <i class="fab fa-linkedin"></i>
       </a>
     </li>
