--- a/project/mobile/index.html
+++ b/project/mobile/index.html
@@ -990,7 +990,7 @@ dataset</a>. Our code repository is located
       
     
     <li>
-      <a href="https://www.linkedin.com/in/jing-an-tzeng-459b4a13a/" target="_blank" rel="noopener">
+      <a href="https://www.linkedin.com/in/jing-an-tzeng/" target="_blank" rel="noopener">
         <i class="fab fa-linkedin"></i>
       </a>
     </li>
