--- a/index.html
+++ b/index.html
@@ -941,10 +941,8 @@
             </div>
             <div class="card-text">  <br>
 <ul>
-<li>Designed an object detection pipeline from scratch by OpenCV, Tkinter and Scikit-learn in Python to detect the tin
-droplets and satellites for preprocessing, labeling, feature extraction and classification.</li>
-<li>Detected the interest objects with maximally stable extremal regions (MSER), eliminated the overlapped bounding
-boxes with Non-Maximum Suppression (NMS) and achieved 99% accuracy.</li>
+<li>Designed an object detection pipeline from scratch by OpenCV, Tkinter and Scikit-learn in Python to detect the tin droplets and satellites for preprocessing, labeling, feature extraction and classification.</li>
+<li>Detected the interest objects with maximally stable extremal regions (MSER) and eliminated the overlapped bounding boxes with Non-Maximum Suppression (NMS).</li>
 <li>Evaluated the classifiers’ performance with k-fold cross validation, learning curve and validation curve.</li>
 </ul>
 </div>
