--- a/index.html
+++ b/index.html
@@ -970,7 +970,7 @@
       <div class="col py-2">
         <div class="card">
           <div class="card-body">
-            <h4 class="card-title exp-title text-muted mt-0 mb-1">Mobile Robotics - Visual Inertia Navigation</h4>
+            <h4 class="card-title exp-title text-muted mt-0 mb-1">Mobile Robotics - Visual Inertia Navigation (VI-SLAM)</h4>
             <h4 class="card-title exp-company text-muted my-0">Team Leader</h4>
             <div class="text-muted exp-meta">
               Mar 2020 –
