--- a/project/inpainting/index.html
+++ b/project/inpainting/index.html
@@ -1057,7 +1057,7 @@ The high foreground displacement videos can often reveal different parts of the 
 
       <div class="media-body">
         <h5 class="card-title"><a href="https://robintzeng.github.io/">JING-AN TZENG</a></h5>
-        <h6 class="card-subtitle">2nd Year Master Student in Electrical and Computer Engineering</h6>
+        <h6 class="card-subtitle">Video Processing Algorithm Engineer</h6>
         <p class="card-text">My interests include Robotics, Computer Vision and Control System.</p>
         <ul class="network-icon" aria-hidden="true">
   
